--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-    :root{  --cor-de-fundo:#4177E4;
-    }
+   @import url("styles/header.css");
+
+   :root{  --cor-de-fundo:#4177E4; 
+    --branco: #FFFFFF;
+}  
+
 
      body {background-color: var(--cor-de-fundo);}
