--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
    @import url("styles/header.css");
 
-   :root{  --cor-de-fundo:#4177E4; 
+   :root{ 
+     --cor-de-fundo:#4768a5; 
     --branco: #FFFFFF;
+      --laranja: #EB9B00;
+      --azul-degrade: linear-gradient( 97.54deg,#002F52 35.49%, #326589 165.37%);
+
 }  
 
 
